syntax = "proto2";

package basic;

message Numbers {
    optional int32 int32_num = 1;
    optional int64 int64_num = 2;
    optional uint32 uint32_num = 3;
    optional uint64 uint64_num = 4;
    optional sint32 sint32_num = 5;
    optional sint64 sint64_num = 6;
    optional fixed32 fixed32_num = 7;
    optional fixed64 fixed64_num = 8;
    optional sfixed32 sfixed32_num = 9;
    optional sfixed64 sfixed64_num = 10;
}
